force-app/main/default/objects/Return__c/fields/Return_Description__c.field-meta.xml
<CustomField>
    <fullName>Return_Description__c</fullName>
    <label>Return Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>