force-app/main/default/objects/Return__c/fields/Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason__c</fullName>
    <label>Return Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defective Product</fullName>
                <default>true</default>
                <label>Defective Product</label>
            </value>
            <value>
                <fullName>Wrong Item Delivered</fullName>
            </value>
            <value>
                <fullName>Damaged in Transit</fullName>
            </value>
            <value>
                <fullName>Product Not as Described</fullName>
            </value>
            <value>
                <fullName>Size or Fit Issue</fullName>
            </value>
            <value>
                <fullName>Changed Mind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>