force-app/main/default/objects/Return__c/validationRules/VR_Return_Requires_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Return_Requires_Order</fullName>
    <active>true</active>
    <description>VR_Return_Requires_Order</description>
    <errorConditionFormula>ISBLANK(Order__c)</errorConditionFormula>
    <errorDisplayField>Order__c</errorDisplayField>
    <errorMessage>A return cannot be requested without specifying an associated Order.</errorMessage>
</ValidationRule>